--- a/package.json
+++ b/package.json
@@ -17,10 +17,19 @@
   },
   "homepage": "https://github.com/RThevenoux/thot#readme",
   "devDependencies": {
+    "brfs": "^2.0.0",
+    "browserify": "^16.2.2",
     "csv": "^3.1.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-inject": "^4.3.2",
-    "run-sequence": "^2.2.1"
+    "gulp-sourcemaps": "^2.6.4",
+    "gulplog": "^1.0.0",
+    "run-sequence": "^2.2.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "ipa-parser": "0.0.5"
   }
 }
